// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`websocket lwba endpoint should return success 1`] = `
{
  "ask": 1562.4083581615457,
  "asksize": 31.63132041,
  "bid": 1562.3384315992228,
  "bidsize": 64.67517577,
  "data": {
    "ask": 1562.4083581615457,
    "bid": 1562.3384315992228,
    "mid": 1562.3733948803842,
    "result": 1562.3733948803842,
  },
  "mid": 1562.3733948803842,
  "result": 1562.3733948803842,
  "spread": 0.000044756626394287605,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1024,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1678248273750,
  },
}
`;

exports[`websocket price endpoint should return success 1`] = `
{
  "data": {
    "result": 1500,
  },
  "result": 1500,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1024,
    "providerDataStreamEstablishedUnixMs": 1010,
    "providerIndicatedTimeUnixMs": 1591649644000,
  },
}
`;
